// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FontResults filters based on tag "cute" in search query 1`] = `
<font-results>
  
            
  <div
    id="search-status"
  >
    <search-status
      class="search-status"
      resultslength="15"
      search=""
      selectedcategory=""
      selectedsubset=""
      selectedtag="cute"
      selectedvariant=""
    />
  </div>
  
            
  <div
    class="families"
    id="families"
  >
    <font-item
      font="{"family":"Are You Serious","variants":["regular"],"subsets":["latin","latin-ext","vietnamese"],"category":"handwriting","tags":["whimsical","curls","cute","kids","swirl"],"lineNumber":86}"
      selectedsubset=""
      selectedtag="cute"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Bellota","variants":["300","300italic","regular","italic","700","700italic"],"subsets":["cyrillic","latin","latin-ext","vietnamese"],"category":"display","tags":["whimsical","large sizes","cute","decorative"],"lineNumber":161}"
      selectedsubset=""
      selectedtag="cute"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Bonbon","variants":["regular"],"subsets":["latin"],"category":"handwriting","tags":["cute","decorative","headlines"],"lineNumber":197}"
      selectedsubset=""
      selectedtag="cute"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Butterfly Kids","variants":["regular"],"subsets":["latin","latin-ext"],"category":"handwriting","tags":["kids","cute"],"lineNumber":216}"
      selectedsubset=""
      selectedtag="cute"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Delius Swash Caps","variants":["regular"],"subsets":["latin"],"category":"handwriting","tags":["cute","swash","round"],"lineNumber":329}"
      selectedsubset=""
      selectedtag="cute"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Emilys Candy","variants":["regular"],"subsets":["latin","latin-ext"],"category":"display","tags":["cute","love"],"lineNumber":367}"
      selectedsubset=""
      selectedtag="cute"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Fuzzy Bubbles","variants":["regular","700"],"subsets":["latin","latin-ext","vietnamese"],"category":"handwriting","tags":["cute","kids","playful","handwritten"],"lineNumber":437}"
      selectedsubset=""
      selectedtag="cute"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Gorditas","variants":["regular","700"],"subsets":["latin"],"category":"display","tags":["love","cute"],"lineNumber":476}"
      selectedsubset=""
      selectedtag="cute"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Hi Melody","variants":["regular"],"subsets":["korean","latin"],"category":"handwriting","tags":["cute","korean"],"lineNumber":517}"
      selectedsubset=""
      selectedtag="cute"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Ingrid Darling","variants":["regular"],"subsets":["latin","latin-ext","vietnamese"],"category":"handwriting","tags":["cursive","cute","playful","swirl","whimsical"],"lineNumber":559}"
      selectedsubset=""
      selectedtag="cute"
      selectedvariant=""
    />
  </div>
  
            
  <div
    id="pagination"
  >
    <pagination-buttons
      currentpage="1"
      pagesize="10"
      resultslength="15"
    />
  </div>
  
          
</font-results>
`;

exports[`FontResults filters fonts when a category is selected 1`] = `
<font-results>
  
            
  <div
    id="search-status"
  >
    <search-status
      class="search-status"
      resultslength="391"
      search=""
      selectedcategory="display"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
  </div>
  
            
  <div
    class="families"
    id="families"
  >
    <font-item
      font="{"family":"Aboreto","variants":["regular"],"subsets":["latin","latin-ext"],"category":"display","tags":["caps"],"lineNumber":5}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Abril Fatface","variants":["regular"],"subsets":["latin","latin-ext"],"category":"display","tags":["heavy","elegant","didone","headlines"],"lineNumber":6}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Akaya Kanadaka","variants":["regular"],"subsets":["kannada","latin","latin-ext"],"category":"display","tags":[],"lineNumber":14}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Akaya Telivigala","variants":["regular"],"subsets":["latin","latin-ext","telugu"],"category":"display","tags":[],"lineNumber":15}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Akronim","variants":["regular"],"subsets":["latin","latin-ext"],"category":"display","tags":["brush","lines"],"lineNumber":16}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Alfa Slab One","variants":["regular"],"subsets":["latin","latin-ext","vietnamese"],"category":"display","tags":["slab","heavy","egyptian"],"lineNumber":31}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Allan","variants":["regular","700"],"subsets":["latin","latin-ext"],"category":"display","tags":["slanted"],"lineNumber":36}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Almendra Display","variants":["regular"],"subsets":["latin","latin-ext"],"category":"display","tags":["whimsical","literature"],"lineNumber":43}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Alumni Sans Inline One","variants":["regular","italic"],"subsets":["latin","latin-ext","vietnamese"],"category":"display","tags":["block","heavy"],"lineNumber":47}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Amarante","variants":["regular"],"subsets":["latin","latin-ext"],"category":"display","tags":["art nouveau"],"lineNumber":49}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
  </div>
  
            
  <div
    id="pagination"
  >
    <pagination-buttons
      currentpage="1"
      pagesize="10"
      resultslength="391"
    />
  </div>
  
          
</font-results>
`;

exports[`FontResults filters fonts when a subset is selected 1`] = `
<font-results>
  
            
  <div
    id="search-status"
  >
    <search-status
      class="search-status"
      resultslength="42"
      search=""
      selectedcategory=""
      selectedsubset="arabic"
      selectedtag=""
      selectedvariant=""
    />
  </div>
  
            
  <div
    class="families"
    id="families"
  >
    <font-item
      font="{"family":"Alexandria","variants":["100","200","300","regular","500","600","700","800","900"],"subsets":["arabic","latin","latin-ext","vietnamese"],"category":"sans-serif","tags":[],"lineNumber":30}"
      selectedsubset="arabic"
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Alkalami","variants":["regular"],"subsets":["arabic","latin","latin-ext"],"category":"serif","tags":[],"lineNumber":35}"
      selectedsubset="arabic"
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Almarai","variants":["300","regular","700","800"],"subsets":["arabic"],"category":"sans-serif","tags":["arabic"],"lineNumber":41}"
      selectedsubset="arabic"
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Amiri","variants":["regular","italic","700","700italic"],"subsets":["arabic","latin","latin-ext"],"category":"serif","tags":["1900s","elegant"],"lineNumber":54}"
      selectedsubset="arabic"
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Amiri Quran","variants":["regular"],"subsets":["arabic","latin"],"category":"serif","tags":[],"lineNumber":55}"
      selectedsubset="arabic"
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Aref Ruqaa","variants":["regular","700"],"subsets":["arabic","latin","latin-ext"],"category":"serif","tags":["calligraphic"],"lineNumber":87}"
      selectedsubset="arabic"
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Aref Ruqaa Ink","variants":["regular","700"],"subsets":["arabic","latin","latin-ext"],"category":"serif","tags":[],"lineNumber":88}"
      selectedsubset="arabic"
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Baloo Bhaijaan 2","variants":["regular","500","600","700","800"],"subsets":["arabic","latin","latin-ext","vietnamese"],"category":"display","tags":[],"lineNumber":134}"
      selectedsubset="arabic"
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Blaka","variants":["regular"],"subsets":["arabic","latin","latin-ext"],"category":"display","tags":["gothic","arabic"],"lineNumber":190}"
      selectedsubset="arabic"
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Blaka Hollow","variants":["regular"],"subsets":["arabic","latin","latin-ext"],"category":"display","tags":["gothic","arabic","outline"],"lineNumber":191}"
      selectedsubset="arabic"
      selectedtag=""
      selectedvariant=""
    />
  </div>
  
            
  <div
    id="pagination"
  >
    <pagination-buttons
      currentpage="1"
      pagesize="10"
      resultslength="42"
    />
  </div>
  
          
</font-results>
`;

exports[`FontResults filters fonts when a tag is selected 1`] = `
<font-results>
  
            
  <div
    id="search-status"
  >
    <search-status
      class="search-status"
      resultslength="24"
      search=""
      selectedcategory=""
      selectedsubset=""
      selectedtag="outline"
      selectedvariant=""
    />
  </div>
  
            
  <div
    class="families"
    id="families"
  >
    <font-item
      font="{"family":"Alumni Sans Collegiate One","variants":["regular","italic"],"subsets":["cyrillic","latin","latin-ext","vietnamese"],"category":"sans-serif","tags":["outline","collegiate"],"lineNumber":46}"
      selectedsubset=""
      selectedtag="outline"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Blaka Hollow","variants":["regular"],"subsets":["arabic","latin","latin-ext"],"category":"display","tags":["gothic","arabic","outline"],"lineNumber":191}"
      selectedsubset=""
      selectedtag="outline"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Bungee Outline","variants":["regular"],"subsets":["latin","latin-ext","vietnamese"],"category":"display","tags":["outline","signage"],"lineNumber":212}"
      selectedsubset=""
      selectedtag="outline"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Ewert","variants":["regular"],"subsets":["latin","latin-ext"],"category":"display","tags":["western","outline","decorative"],"lineNumber":383}"
      selectedsubset=""
      selectedtag="outline"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Geostar","variants":["regular"],"subsets":["latin"],"category":"display","tags":["square","outline","headlines"],"lineNumber":458}"
      selectedsubset=""
      selectedtag="outline"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Jacques Francois Shadow","variants":["regular"],"subsets":["latin"],"category":"display","tags":["outline","shadow","1700s","large sizes"],"lineNumber":574}"
      selectedsubset=""
      selectedtag="outline"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Kranky","variants":["regular"],"subsets":["latin"],"category":"display","tags":["outline"],"lineNumber":634}"
      selectedsubset=""
      selectedtag="outline"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Kumar One Outline","variants":["regular"],"subsets":["gujarati","latin","latin-ext"],"category":"display","tags":["outline"],"lineNumber":642}"
      selectedsubset=""
      selectedtag="outline"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Londrina Outline","variants":["regular"],"subsets":["latin"],"category":"display","tags":["fun","outline","handwritten"],"lineNumber":695}"
      selectedsubset=""
      selectedtag="outline"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Londrina Shadow","variants":["regular"],"subsets":["latin"],"category":"display","tags":["outline","shadow","handwritten"],"lineNumber":696}"
      selectedsubset=""
      selectedtag="outline"
      selectedvariant=""
    />
  </div>
  
            
  <div
    id="pagination"
  >
    <pagination-buttons
      currentpage="1"
      pagesize="10"
      resultslength="24"
    />
  </div>
  
          
</font-results>
`;

exports[`FontResults filters fonts when a variant is selected 1`] = `
<font-results>
  
            
  <div
    id="search-status"
  >
    <search-status
      class="search-status"
      resultslength="136"
      search=""
      selectedcategory=""
      selectedsubset=""
      selectedtag=""
      selectedvariant="300italic"
    />
  </div>
  
            
  <div
    class="families"
    id="families"
  >
    <font-item
      font="{"family":"Advent Pro","variants":["100","200","300","regular","500","600","700","800","900","100italic","200italic","300italic","italic","500italic","600italic","700italic","800italic","900italic"],"subsets":["cyrillic","cyrillic-ext","greek","latin","latin-ext"],"category":"sans-serif","tags":["modern"],"lineNumber":12}"
      selectedsubset=""
      selectedtag=""
      selectedvariant="300italic"
    />
    

    <font-item
      font="{"family":"Albert Sans","variants":["100","200","300","regular","500","600","700","800","900","100italic","200italic","300italic","italic","500italic","600italic","700italic","800italic","900italic"],"subsets":["latin","latin-ext"],"category":"sans-serif","tags":[],"lineNumber":21}"
      selectedsubset=""
      selectedtag=""
      selectedvariant="300italic"
    />
    

    <font-item
      font="{"family":"Alegreya Sans","variants":["100","100italic","300","300italic","regular","italic","500","500italic","700","700italic","800","800italic","900","900italic"],"subsets":["cyrillic","cyrillic-ext","greek","greek-ext","latin","latin-ext","vietnamese"],"category":"sans-serif","tags":["humanist","literature"],"lineNumber":26}"
      selectedsubset=""
      selectedtag=""
      selectedvariant="300italic"
    />
    

    <font-item
      font="{"family":"Alegreya Sans SC","variants":["100","100italic","300","300italic","regular","italic","500","500italic","700","700italic","800","800italic","900","900italic"],"subsets":["cyrillic","cyrillic-ext","greek","greek-ext","latin","latin-ext","vietnamese"],"category":"sans-serif","tags":["small caps","literature"],"lineNumber":27}"
      selectedsubset=""
      selectedtag=""
      selectedvariant="300italic"
    />
    

    <font-item
      font="{"family":"Aleo","variants":["300","300italic","regular","italic","700","700italic"],"subsets":["latin","latin-ext"],"category":"serif","tags":[],"lineNumber":28}"
      selectedsubset=""
      selectedtag=""
      selectedvariant="300italic"
    />
    

    <font-item
      font="{"family":"Alumni Sans","variants":["100","200","300","regular","500","600","700","800","900","100italic","200italic","300italic","italic","500italic","600italic","700italic","800italic","900italic"],"subsets":["cyrillic","cyrillic-ext","latin","latin-ext","vietnamese"],"category":"sans-serif","tags":["narrow","condensed","light","thin"],"lineNumber":45}"
      selectedsubset=""
      selectedtag=""
      selectedvariant="300italic"
    />
    

    <font-item
      font="{"family":"Anybody","variants":["100","200","300","regular","500","600","700","800","900","100italic","200italic","300italic","italic","500italic","600italic","700italic","800italic","900italic"],"subsets":["latin","latin-ext","vietnamese"],"category":"display","tags":["eurostile"],"lineNumber":78}"
      selectedsubset=""
      selectedtag=""
      selectedvariant="300italic"
    />
    

    <font-item
      font="{"family":"Archivo","variants":["100","200","300","regular","500","600","700","800","900","100italic","200italic","300italic","italic","500italic","600italic","700italic","800italic","900italic"],"subsets":["latin","latin-ext","vietnamese"],"category":"sans-serif","tags":[],"lineNumber":83}"
      selectedsubset=""
      selectedtag=""
      selectedvariant="300italic"
    />
    

    <font-item
      font="{"family":"Asap","variants":["100","200","300","regular","500","600","700","800","900","100italic","200italic","300italic","italic","500italic","600italic","700italic","800italic","900italic"],"subsets":["latin","latin-ext","vietnamese"],"category":"sans-serif","tags":["round"],"lineNumber":98}"
      selectedsubset=""
      selectedtag=""
      selectedvariant="300italic"
    />
    

    <font-item
      font="{"family":"Asap Condensed","variants":["200","200italic","300","300italic","regular","italic","500","500italic","600","600italic","700","700italic","800","800italic","900","900italic"],"subsets":["latin","latin-ext","vietnamese"],"category":"sans-serif","tags":["condensed"],"lineNumber":99}"
      selectedsubset=""
      selectedtag=""
      selectedvariant="300italic"
    />
  </div>
  
            
  <div
    id="pagination"
  >
    <pagination-buttons
      currentpage="1"
      pagesize="10"
      resultslength="136"
    />
  </div>
  
          
</font-results>
`;

exports[`FontResults filters fonts when search 1`] = `
<font-results>
  
            
  <div
    id="search-status"
  >
    <search-status
      class="search-status"
      resultslength="1"
      search="are you serious"
      selectedcategory=""
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
  </div>
  
            
  <div
    class="families"
    id="families"
  >
    <font-item
      font="{"family":"Are You Serious","variants":["regular"],"subsets":["latin","latin-ext","vietnamese"],"category":"handwriting","tags":["whimsical","curls","cute","kids","swirl"],"lineNumber":86}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
  </div>
  
            
  <div
    id="pagination"
  >
    <pagination-buttons
      currentpage="1"
      pagesize="10"
      resultslength="1"
    />
  </div>
  
          
</font-results>
`;

exports[`FontResults filters when tag radio clicked 1`] = `
<font-results>
  
            
  <div
    id="search-status"
  >
    <search-status
      class="search-status"
      resultslength="2"
      search=""
      selectedcategory=""
      selectedsubset=""
      selectedtag="1980s"
      selectedvariant=""
    />
  </div>
  
            
  <div
    class="families"
    id="families"
  >
    <font-item
      font="{"family":"Press Start 2P","variants":["regular"],"subsets":["cyrillic","cyrillic-ext","greek","latin","latin-ext"],"category":"display","tags":["game","1980s","pixel"],"lineNumber":1139}"
      selectedsubset=""
      selectedtag="1980s"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Rubik 80s Fade","variants":["regular"],"subsets":["cyrillic","cyrillic-ext","hebrew","latin","latin-ext"],"category":"display","tags":["1980s"],"lineNumber":1217}"
      selectedsubset=""
      selectedtag="1980s"
      selectedvariant=""
    />
  </div>
  
            
  <div
    id="pagination"
  >
    <pagination-buttons
      currentpage="1"
      pagesize="10"
      resultslength="2"
    />
  </div>
  
          
</font-results>
`;

exports[`FontResults fires a custom event when a font is selected 1`] = `
<font-results>
  
            
  <div
    id="search-status"
  >
    <search-status
      class="search-status"
      resultslength="15"
      search=""
      selectedcategory=""
      selectedsubset=""
      selectedtag="cute"
      selectedvariant=""
    />
  </div>
  
            
  <div
    class="families"
    id="families"
  >
    <font-item
      font="{"family":"Are You Serious","variants":["regular"],"subsets":["latin","latin-ext","vietnamese"],"category":"handwriting","tags":["whimsical","curls","cute","kids","swirl"],"lineNumber":86}"
      selectedsubset=""
      selectedtag="cute"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Bellota","variants":["300","300italic","regular","italic","700","700italic"],"subsets":["cyrillic","latin","latin-ext","vietnamese"],"category":"display","tags":["whimsical","large sizes","cute","decorative"],"lineNumber":161}"
      selectedsubset=""
      selectedtag="cute"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Bonbon","variants":["regular"],"subsets":["latin"],"category":"handwriting","tags":["cute","decorative","headlines"],"lineNumber":197}"
      selectedsubset=""
      selectedtag="cute"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Butterfly Kids","variants":["regular"],"subsets":["latin","latin-ext"],"category":"handwriting","tags":["kids","cute"],"lineNumber":216}"
      selectedsubset=""
      selectedtag="cute"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Delius Swash Caps","variants":["regular"],"subsets":["latin"],"category":"handwriting","tags":["cute","swash","round"],"lineNumber":329}"
      selectedsubset=""
      selectedtag="cute"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Emilys Candy","variants":["regular"],"subsets":["latin","latin-ext"],"category":"display","tags":["cute","love"],"lineNumber":367}"
      selectedsubset=""
      selectedtag="cute"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Fuzzy Bubbles","variants":["regular","700"],"subsets":["latin","latin-ext","vietnamese"],"category":"handwriting","tags":["cute","kids","playful","handwritten"],"lineNumber":437}"
      selectedsubset=""
      selectedtag="cute"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Gorditas","variants":["regular","700"],"subsets":["latin"],"category":"display","tags":["love","cute"],"lineNumber":476}"
      selectedsubset=""
      selectedtag="cute"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Hi Melody","variants":["regular"],"subsets":["korean","latin"],"category":"handwriting","tags":["cute","korean"],"lineNumber":517}"
      selectedsubset=""
      selectedtag="cute"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Ingrid Darling","variants":["regular"],"subsets":["latin","latin-ext","vietnamese"],"category":"handwriting","tags":["cursive","cute","playful","swirl","whimsical"],"lineNumber":559}"
      selectedsubset=""
      selectedtag="cute"
      selectedvariant=""
    />
  </div>
  
            
  <div
    id="pagination"
  >
    <pagination-buttons
      currentpage="1"
      pagesize="10"
      resultslength="15"
    />
  </div>
  
          
</font-results>
`;

exports[`FontResults fires a next-page custom event 1`] = `
<font-results>
  
            
  <div
    id="search-status"
  >
    <search-status
      class="search-status"
      resultslength="1497"
      search=""
      selectedcategory=""
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
  </div>
  
            
  <div
    class="families"
    id="families"
  >
    <font-item
      font="{"family":"Advent Pro","variants":["100","200","300","regular","500","600","700","800","900","100italic","200italic","300italic","italic","500italic","600italic","700italic","800italic","900italic"],"subsets":["cyrillic","cyrillic-ext","greek","latin","latin-ext"],"category":"sans-serif","tags":["modern"],"lineNumber":12}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Aguafina Script","variants":["regular"],"subsets":["latin","latin-ext"],"category":"handwriting","tags":["cursive","elegant","script"],"lineNumber":13}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Akaya Kanadaka","variants":["regular"],"subsets":["kannada","latin","latin-ext"],"category":"display","tags":[],"lineNumber":14}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Akaya Telivigala","variants":["regular"],"subsets":["latin","latin-ext","telugu"],"category":"display","tags":[],"lineNumber":15}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Akronim","variants":["regular"],"subsets":["latin","latin-ext"],"category":"display","tags":["brush","lines"],"lineNumber":16}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Akshar","variants":["300","regular","500","600","700"],"subsets":["devanagari","latin","latin-ext"],"category":"sans-serif","tags":["condensed","narrow"],"lineNumber":17}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Aladin","variants":["regular"],"subsets":["latin","latin-ext"],"category":"handwriting","tags":["art deco"],"lineNumber":18}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Alata","variants":["regular"],"subsets":["latin","latin-ext","vietnamese"],"category":"sans-serif","tags":["geometric"],"lineNumber":19}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Alatsi","variants":["regular"],"subsets":["cyrillic-ext","latin","latin-ext","vietnamese"],"category":"sans-serif","tags":["modern","condensed","geometric"],"lineNumber":20}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Albert Sans","variants":["100","200","300","regular","500","600","700","800","900","100italic","200italic","300italic","italic","500italic","600italic","700italic","800italic","900italic"],"subsets":["latin","latin-ext"],"category":"sans-serif","tags":[],"lineNumber":21}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
  </div>
  
            
  <div
    id="pagination"
  >
    <pagination-buttons
      currentpage="2"
      pagesize="10"
      resultslength="1497"
    />
  </div>
  
          
</font-results>
`;

exports[`FontResults fires a prev-page custom event 1`] = `
<font-results>
  
            
  <div
    id="search-status"
  >
    <search-status
      class="search-status"
      resultslength="1497"
      search=""
      selectedcategory=""
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
  </div>
  
            
  <div
    class="families"
    id="families"
  >
    <font-item
      font="{"family":"ABeeZee","variants":["regular","italic"],"subsets":["latin","latin-ext"],"category":"sans-serif","tags":["literacy","kids"],"lineNumber":2}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Abel","variants":["regular"],"subsets":["latin"],"category":"sans-serif","tags":["condensed"],"lineNumber":3}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Abhaya Libre","variants":["regular","500","600","700","800"],"subsets":["latin","latin-ext","sinhala"],"category":"serif","tags":[],"lineNumber":4}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Aboreto","variants":["regular"],"subsets":["latin","latin-ext"],"category":"display","tags":["caps"],"lineNumber":5}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Abril Fatface","variants":["regular"],"subsets":["latin","latin-ext"],"category":"display","tags":["heavy","elegant","didone","headlines"],"lineNumber":6}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Abyssinica SIL","variants":["regular"],"subsets":["ethiopic","latin","latin-ext"],"category":"serif","tags":[],"lineNumber":7}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Aclonica","variants":["regular"],"subsets":["latin"],"category":"sans-serif","tags":["modern","friendly"],"lineNumber":8}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Acme","variants":["regular"],"subsets":["latin"],"category":"sans-serif","tags":["cartoon","comic","groovy","headlines"],"lineNumber":9}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Actor","variants":["regular"],"subsets":["latin"],"category":"sans-serif","tags":["thin","legibility"],"lineNumber":10}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Adamina","variants":["regular"],"subsets":["latin"],"category":"serif","tags":["compact","small sizes","transitional"],"lineNumber":11}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
  </div>
  
            
  <div
    id="pagination"
  >
    <pagination-buttons
      currentpage="1"
      pagesize="10"
      resultslength="1497"
    />
  </div>
  
          
</font-results>
`;

exports[`FontResults removes all filters 1`] = `
<font-results>
  
            
  <div
    id="search-status"
  >
    <search-status
      class="search-status"
      resultslength="1497"
      search=""
      selectedcategory=""
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
  </div>
  
            
  <div
    class="families"
    id="families"
  >
    <font-item
      font="{"family":"ABeeZee","variants":["regular","italic"],"subsets":["latin","latin-ext"],"category":"sans-serif","tags":["literacy","kids"],"lineNumber":2}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Abel","variants":["regular"],"subsets":["latin"],"category":"sans-serif","tags":["condensed"],"lineNumber":3}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Abhaya Libre","variants":["regular","500","600","700","800"],"subsets":["latin","latin-ext","sinhala"],"category":"serif","tags":[],"lineNumber":4}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Aboreto","variants":["regular"],"subsets":["latin","latin-ext"],"category":"display","tags":["caps"],"lineNumber":5}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Abril Fatface","variants":["regular"],"subsets":["latin","latin-ext"],"category":"display","tags":["heavy","elegant","didone","headlines"],"lineNumber":6}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Abyssinica SIL","variants":["regular"],"subsets":["ethiopic","latin","latin-ext"],"category":"serif","tags":[],"lineNumber":7}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Aclonica","variants":["regular"],"subsets":["latin"],"category":"sans-serif","tags":["modern","friendly"],"lineNumber":8}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Acme","variants":["regular"],"subsets":["latin"],"category":"sans-serif","tags":["cartoon","comic","groovy","headlines"],"lineNumber":9}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Actor","variants":["regular"],"subsets":["latin"],"category":"sans-serif","tags":["thin","legibility"],"lineNumber":10}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Adamina","variants":["regular"],"subsets":["latin"],"category":"serif","tags":["compact","small sizes","transitional"],"lineNumber":11}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
  </div>
  
            
  <div
    id="pagination"
  >
    <pagination-buttons
      currentpage="1"
      pagesize="10"
      resultslength="1497"
    />
  </div>
  
          
</font-results>
`;

exports[`FontResults removes search filter 1`] = `
<font-results>
  
            
  <div
    id="search-status"
  >
    <search-status
      class="search-status"
      resultslength="1497"
      search=""
      selectedcategory=""
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
  </div>
  
            
  <div
    class="families"
    id="families"
  >
    <font-item
      font="{"family":"ABeeZee","variants":["regular","italic"],"subsets":["latin","latin-ext"],"category":"sans-serif","tags":["literacy","kids"],"lineNumber":2}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Abel","variants":["regular"],"subsets":["latin"],"category":"sans-serif","tags":["condensed"],"lineNumber":3}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Abhaya Libre","variants":["regular","500","600","700","800"],"subsets":["latin","latin-ext","sinhala"],"category":"serif","tags":[],"lineNumber":4}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Aboreto","variants":["regular"],"subsets":["latin","latin-ext"],"category":"display","tags":["caps"],"lineNumber":5}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Abril Fatface","variants":["regular"],"subsets":["latin","latin-ext"],"category":"display","tags":["heavy","elegant","didone","headlines"],"lineNumber":6}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Abyssinica SIL","variants":["regular"],"subsets":["ethiopic","latin","latin-ext"],"category":"serif","tags":[],"lineNumber":7}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Aclonica","variants":["regular"],"subsets":["latin"],"category":"sans-serif","tags":["modern","friendly"],"lineNumber":8}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Acme","variants":["regular"],"subsets":["latin"],"category":"sans-serif","tags":["cartoon","comic","groovy","headlines"],"lineNumber":9}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Actor","variants":["regular"],"subsets":["latin"],"category":"sans-serif","tags":["thin","legibility"],"lineNumber":10}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Adamina","variants":["regular"],"subsets":["latin"],"category":"serif","tags":["compact","small sizes","transitional"],"lineNumber":11}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
  </div>
  
            
  <div
    id="pagination"
  >
    <pagination-buttons
      currentpage="1"
      pagesize="10"
      resultslength="1497"
    />
  </div>
  
          
</font-results>
`;

exports[`FontResults removes tag 1`] = `
<font-results>
  
            
  <div
    id="search-status"
  >
    <search-status
      class="search-status"
      resultslength="1497"
      search=""
      selectedcategory=""
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
  </div>
  
            
  <div
    class="families"
    id="families"
  >
    <font-item
      font="{"family":"ABeeZee","variants":["regular","italic"],"subsets":["latin","latin-ext"],"category":"sans-serif","tags":["literacy","kids"],"lineNumber":2}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Abel","variants":["regular"],"subsets":["latin"],"category":"sans-serif","tags":["condensed"],"lineNumber":3}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Abhaya Libre","variants":["regular","500","600","700","800"],"subsets":["latin","latin-ext","sinhala"],"category":"serif","tags":[],"lineNumber":4}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Aboreto","variants":["regular"],"subsets":["latin","latin-ext"],"category":"display","tags":["caps"],"lineNumber":5}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Abril Fatface","variants":["regular"],"subsets":["latin","latin-ext"],"category":"display","tags":["heavy","elegant","didone","headlines"],"lineNumber":6}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Abyssinica SIL","variants":["regular"],"subsets":["ethiopic","latin","latin-ext"],"category":"serif","tags":[],"lineNumber":7}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Aclonica","variants":["regular"],"subsets":["latin"],"category":"sans-serif","tags":["modern","friendly"],"lineNumber":8}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Acme","variants":["regular"],"subsets":["latin"],"category":"sans-serif","tags":["cartoon","comic","groovy","headlines"],"lineNumber":9}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Actor","variants":["regular"],"subsets":["latin"],"category":"sans-serif","tags":["thin","legibility"],"lineNumber":10}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Adamina","variants":["regular"],"subsets":["latin"],"category":"serif","tags":["compact","small sizes","transitional"],"lineNumber":11}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
  </div>
  
            
  <div
    id="pagination"
  >
    <pagination-buttons
      currentpage="1"
      pagesize="10"
      resultslength="1497"
    />
  </div>
  
          
</font-results>
`;

exports[`FontResults renders correctly 1`] = `
<font-results>
  
            
  <div
    id="search-status"
  >
    <search-status
      class="search-status"
      resultslength="1497"
      search=""
      selectedcategory=""
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
  </div>
  
            
  <div
    class="families"
    id="families"
  >
    <font-item
      font="{"family":"ABeeZee","variants":["regular","italic"],"subsets":["latin","latin-ext"],"category":"sans-serif","tags":["literacy","kids"],"lineNumber":2}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Abel","variants":["regular"],"subsets":["latin"],"category":"sans-serif","tags":["condensed"],"lineNumber":3}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Abhaya Libre","variants":["regular","500","600","700","800"],"subsets":["latin","latin-ext","sinhala"],"category":"serif","tags":[],"lineNumber":4}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Aboreto","variants":["regular"],"subsets":["latin","latin-ext"],"category":"display","tags":["caps"],"lineNumber":5}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Abril Fatface","variants":["regular"],"subsets":["latin","latin-ext"],"category":"display","tags":["heavy","elegant","didone","headlines"],"lineNumber":6}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Abyssinica SIL","variants":["regular"],"subsets":["ethiopic","latin","latin-ext"],"category":"serif","tags":[],"lineNumber":7}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Aclonica","variants":["regular"],"subsets":["latin"],"category":"sans-serif","tags":["modern","friendly"],"lineNumber":8}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Acme","variants":["regular"],"subsets":["latin"],"category":"sans-serif","tags":["cartoon","comic","groovy","headlines"],"lineNumber":9}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Actor","variants":["regular"],"subsets":["latin"],"category":"sans-serif","tags":["thin","legibility"],"lineNumber":10}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Adamina","variants":["regular"],"subsets":["latin"],"category":"serif","tags":["compact","small sizes","transitional"],"lineNumber":11}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
  </div>
  
            
  <div
    id="pagination"
  >
    <pagination-buttons
      currentpage="1"
      pagesize="10"
      resultslength="1497"
    />
  </div>
  
          
</font-results>
`;

exports[`FontResults selects need tags tag 1`] = `
<font-results>
  
            
  <div
    id="search-status"
  >
    <search-status
      class="search-status"
      resultslength="523"
      search=""
      selectedcategory=""
      selectedsubset=""
      selectedtag="need tags"
      selectedvariant=""
    />
  </div>
  
            
  <div
    class="families"
    id="families"
  >
    <font-item
      font="{"family":"Abhaya Libre","variants":["regular","500","600","700","800"],"subsets":["latin","latin-ext","sinhala"],"category":"serif","tags":[],"lineNumber":4}"
      selectedsubset=""
      selectedtag="need tags"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Abyssinica SIL","variants":["regular"],"subsets":["ethiopic","latin","latin-ext"],"category":"serif","tags":[],"lineNumber":7}"
      selectedsubset=""
      selectedtag="need tags"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Akaya Kanadaka","variants":["regular"],"subsets":["kannada","latin","latin-ext"],"category":"display","tags":[],"lineNumber":14}"
      selectedsubset=""
      selectedtag="need tags"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Akaya Telivigala","variants":["regular"],"subsets":["latin","latin-ext","telugu"],"category":"display","tags":[],"lineNumber":15}"
      selectedsubset=""
      selectedtag="need tags"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Albert Sans","variants":["100","200","300","regular","500","600","700","800","900","100italic","200italic","300italic","italic","500italic","600italic","700italic","800italic","900italic"],"subsets":["latin","latin-ext"],"category":"sans-serif","tags":[],"lineNumber":21}"
      selectedsubset=""
      selectedtag="need tags"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Aleo","variants":["300","300italic","regular","italic","700","700italic"],"subsets":["latin","latin-ext"],"category":"serif","tags":[],"lineNumber":28}"
      selectedsubset=""
      selectedtag="need tags"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Alexandria","variants":["100","200","300","regular","500","600","700","800","900"],"subsets":["arabic","latin","latin-ext","vietnamese"],"category":"sans-serif","tags":[],"lineNumber":30}"
      selectedsubset=""
      selectedtag="need tags"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Alkalami","variants":["regular"],"subsets":["arabic","latin","latin-ext"],"category":"serif","tags":[],"lineNumber":35}"
      selectedsubset=""
      selectedtag="need tags"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Amiri Quran","variants":["regular"],"subsets":["arabic","latin"],"category":"serif","tags":[],"lineNumber":55}"
      selectedsubset=""
      selectedtag="need tags"
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Andada Pro","variants":["regular","500","600","700","800","italic","500italic","600italic","700italic","800italic"],"subsets":["latin","latin-ext","vietnamese"],"category":"serif","tags":[],"lineNumber":58}"
      selectedsubset=""
      selectedtag="need tags"
      selectedvariant=""
    />
  </div>
  
            
  <div
    id="pagination"
  >
    <pagination-buttons
      currentpage="1"
      pagesize="10"
      resultslength="523"
    />
  </div>
  
          
</font-results>
`;

exports[`FontResults skips unknown tag in search query 1`] = `
<font-results>
  
            
  <div
    id="search-status"
  >
    <search-status
      class="search-status"
      resultslength="1497"
      search=""
      selectedcategory=""
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
  </div>
  
            
  <div
    class="families"
    id="families"
  >
    <font-item
      font="{"family":"ABeeZee","variants":["regular","italic"],"subsets":["latin","latin-ext"],"category":"sans-serif","tags":["literacy","kids"],"lineNumber":2}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Abel","variants":["regular"],"subsets":["latin"],"category":"sans-serif","tags":["condensed"],"lineNumber":3}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Abhaya Libre","variants":["regular","500","600","700","800"],"subsets":["latin","latin-ext","sinhala"],"category":"serif","tags":[],"lineNumber":4}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Aboreto","variants":["regular"],"subsets":["latin","latin-ext"],"category":"display","tags":["caps"],"lineNumber":5}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Abril Fatface","variants":["regular"],"subsets":["latin","latin-ext"],"category":"display","tags":["heavy","elegant","didone","headlines"],"lineNumber":6}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Abyssinica SIL","variants":["regular"],"subsets":["ethiopic","latin","latin-ext"],"category":"serif","tags":[],"lineNumber":7}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Aclonica","variants":["regular"],"subsets":["latin"],"category":"sans-serif","tags":["modern","friendly"],"lineNumber":8}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Acme","variants":["regular"],"subsets":["latin"],"category":"sans-serif","tags":["cartoon","comic","groovy","headlines"],"lineNumber":9}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Actor","variants":["regular"],"subsets":["latin"],"category":"sans-serif","tags":["thin","legibility"],"lineNumber":10}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
    

    <font-item
      font="{"family":"Adamina","variants":["regular"],"subsets":["latin"],"category":"serif","tags":["compact","small sizes","transitional"],"lineNumber":11}"
      selectedsubset=""
      selectedtag=""
      selectedvariant=""
    />
  </div>
  
            
  <div
    id="pagination"
  >
    <pagination-buttons
      currentpage="1"
      pagesize="10"
      resultslength="1497"
    />
  </div>
  
          
</font-results>
`;
